package com.wali.live.proto.RoomInfo;
/**

java -jar -Dfile.encoding=UTF-8 ./proto/wire-compiler-2.3.0-SNAPSHOT-jar-with-dependencies.jar \
--proto_path=./proto --java_out=./modulecore/src/main/java-gen-pb/ RoomInfo.proto

*/
//一条回放记录详情
message HisLive {
    required string liveId = 1; //房间id
    optional uint32 viewerCnt = 2; //观众数
    optional string url = 3; //回放地址
    optional uint64 startTime = 4; //直播开始时间
    optional uint64 endTime = 5; //直播结束时间
    optional string liveTitle = 6; //直播标题
    optional string shareUrl = 7; //分享的url
    optional LiveCover liveCover = 8; //房间的封面信息
    optional uint32 type = 9; //类型，0公开，1私密，2:口令，3门票
    optional string password = 10; //密码直播，主播才会返回这个字段
    optional TicketLiveStatus ticketStatus  = 11; //用户观看门票直播状态信息
}

message LiveCover {
    optional string coverUrl = 1; //房间的封面图片地址
}

//门票直播状态信息
message TicketLiveStatus {
    optional uint32 ticketId         = 1; //门票id（礼物id）
    optional bool isAlreadyBuyTicket = 2; //用户是否已买票
    optional bool isEnableTrailer    = 3; //主播是否允许试看
    optional uint32 BuyTicketCnt     = 4; //购买门票人数(结束页用到)
}

message GamePackInfo {
    optional uint64 zuid = 1;
    optional string roomId = 2;
    optional string cdnDomain = 3;
    optional string displayName = 4;
    optional uint32 gameId = 5;
    optional string pacakgeName = 6;
    optional string icon = 7;
    optional string gameApkSs1 = 8;
    optional string gameApk = 9;
    optional string shortName = 10;
    optional GameTagInfoDetail level1 = 11; //一级标签
    optional GameTagInfoDetail level2 = 12; //二级标签
}

message ContestInfo {
    optional bool able_contest = 1; //可以参加答题 true：可以
    optional uint32 revival_num = 2; //复活卡数量
    optional bool is_late = 3; //是否迟到 true：是
    optional string contest_id = 4; //场次id
}

message GameTagInfoDetail {
    optional uint32 id = 1;
    optional string name = 2;
}

//查询别人房间信息,取道的是拉流地址
//zhibo.live.hisroom
message HisRoomReq {
    required uint64 zuid = 1; //查询的主播id
}

message HisRoomRsp {
    required uint32 retCode = 1; //0:表示成功
    optional string liveId = 2; //房间号
    optional string shareUrl = 3; //分享的url
    optional string viewUrl = 4; //完整的观看url
    optional uint32 type = 5; //类型，0公开，1私密
}

//房间id查房间状态,客户端拉流卡顿的时候用
//zhibo.live.roominfo
message RoomInfoReq {
    required uint64 uuid = 1; //操作人id
    required uint64 zuid = 2; //直播人id
    required string liveId = 3;
    optional string password = 4; //如果是加密类型，带密码
    optional bool getLatestLive = 5; //true：优先返回当前正在直播的信息 ,不管是否跟liveId一致。没有直播时，再返回指定liveId的回放; false:返回指定liveid的直播，如果改liveid的房间已关闭，返回liveid回放
    optional bool getGameInfoOnly = 6; //true:只返回游戏信息
}

message RoomInfoRsp {
    required uint32 retCode = 1; //0:表示成功
    optional string downStreamUrl = 2; //完整的url拉流地址,根据客户端的ip选择最优
    optional string playbackUrl = 3; //回放的url
    optional string shareUrl = 4; //分享的url
    optional uint64 beginTime = 5; //直播开始时间
    optional string liveid = 6; //房间id
    optional uint32 type = 7; //类型，0公开，1私密,2 口令,3 门票
    optional TicketLiveStatus ticketStatus = 8; //用户观看门票直播状态信息
    optional GamePackInfo gamepack_info = 9; //游戏包信息
    optional ContestInfo contest_info = 10;
}

//历史直播
//zhibo.live.history
message HistoryLiveReq {
    required uint64 uuid = 1; //操作人id
    required uint64 zuid = 2; //查看历史的直播人id
}

message HistoryLiveRsp {
    required uint32 retCode = 1; //0:表示成功
    repeated HisLive hisLive = 2; //回放详情
    optional uint32 type = 3; //类型，0公开，1私密, 2口令, 3门票
    optional TicketLiveStatus ticketStatus = 4; //用户观看门票直播状态信息
}

//历史房间信息查询、认证
//zhibo.live.historyroominfo
message HistoryRoomInfoReq {
    required uint64 zuid = 1; //主播id
    required string liveId = 2; //房间id
    optional string password = 3; //用户输入的密码
}

message HistoryRoomInfoRsp {
    required uint32 retCode                 = 1; //0:表示成功
    optional HisLive hisLive                = 2; //回放信息
}